# gnome-user-share

./: .cvsignore  .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.in  dav_user.conf  dav_user_2.0.conf  dav_user_2.2.conf  desktop_gnome_file_sharing.schemas.in  file-share-properties.c  file-share-properties.glade  gnome-user-share-properties.desktop.in  gnome-user-share.desktop.in.in  gnome-user-share.doap  gnome-user-share.spec  http.c  md5.c  md5.h  meson.build  meson_options.txt  meson_post_install.py  obexftp.c  obexftp.h  obexpush.c  obexpush.h  user_share-private.c  user_share-private.h  user_share.c  user_share.h
.gitlab/: image-script.sh
data/: Makefile.am  dav_user_2.0.conf  dav_user_2.2.conf  dav_user_2.2.conf.in  dav_user_2.4.conf  desktop_gnome_file_sharing.schemas.in  file-share-properties.glade  file-share-properties.ui  gnome-user-share-obexftp.desktop.in.in  gnome-user-share-obexpush.desktop.in.in  gnome-user-share-properties.desktop.in  gnome-user-share-webdav.desktop.in.in  gnome-user-share-webdav.service.in  gnome-user-share.convert  gnome-user-share.desktop.in.in  meson.build  org.gnome.desktop.file-sharing.gschema.xml.in.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
help/: Makefile.am  Makefile.in
help/C/: gnome-user-share.xml  index.docbook
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/it/: it.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
icons/: Makefile.am
icons/48x48/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  ga.po  gd.po  (+59 more)
src/: Makefile.am  application.rs  config.rs.in  file-share-properties.c  http.c  http.h  http.rs  main.rs  meson.build  nautilus-share-bar.c  nautilus-share-bar.h  obexftp.c  obexpush.c  obexpush.h  settings.rs  share-extension.c  user_share-common.c  user_share-common.h  user_share-obexpush.c  user_share-private.c  user_share-private.h  user_share-webdav.c  user_share.c  user_share.h  utilities.rs
