[package]
name = "gnome-user-share"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
gio = { version = "0.21", features = ["v2_74"]}
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libc = "0.2.154"
selinux = { version = "0.4.4", optional = true }

[profile.release]
debug = "full"
lto = true
codegen-units = 1
