include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-user-share
DOC_ENTITIES =
DOC_INCLUDES = legal.xml
DOC_FIGURES = figures/file-sharing-preferences.png \
	figures/sharing-over-the-network.png \
	figures/sharing-over-bluetooth.png \
	figures/receiving-over-bluetooth.png

DOC_LINGUAS = de el es it sv
