@YELP_HELP_RULES@

HELP_ID = gnome-user-share

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_MEDIA = \
	figures/file-sharing-preferences.png \
	figures/sharing-over-the-network.png \
	figures/sharing-over-bluetooth.png \
	figures/receiving-over-bluetooth.png

HELP_LINGUAS = ca cs de el en_GB es eu fr gl it pt_BR ro ru sl sv zh_CN

-include $(top_srcdir)/git.mk
